# agent-mcp

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: ieee_paper.txt  sample.txt
scripts/: test_e2e.sh
src/: main.py
src/agent/: graph.py  tools.py  tracing.py
src/api/: routes_agent.py  routes_health.py  routes_rag.py  routes_tools.py  routes_trace.py
src/core/: config.py  logging.py
src/mcp_servers/: file_reader.py
src/rag/: ingestion.py  retriever_tool.py  vectorstore.py
src/schemas/: api.py
static/: index.html
tests/: conftest.py  test_agent.py  test_rag.py  test_tools.py
