[project]
name = "agent-mcp"
version = "0.1.0"
description = "LangGraph Agent with MCP Tools and RAG"
requires-python = ">=3.11"
dependencies = [
    "fastapi~=0.128.0",
    "uvicorn[standard]~=0.34.0",
    "pydantic-settings~=2.7",
    "structlog~=25.1",
    "psycopg[binary]>=3.1",
    "langgraph~=1.1.0",
    "langchain-core~=1.2.21",
    "langchain-openai~=1.1.11",
    "langchain-mcp-adapters~=0.2.2",
    "mcp>=1.25,<2",
    "langchain-tavily~=0.2.17",
    "simpleeval~=1.0.7",
    "langchain-postgres~=0.0.17",
    "langchain-text-splitters~=1.1.1",
    "pypdf~=6.9",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.3",
    "pytest-asyncio~=0.25",
    "httpx~=0.28",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
